trythis - add vote_virtual thread