@@ -38,8 +38,12 @@ public class Vote {
 		System.out.println("\n\n\n\n\n\n\n"); // 공간 확보
 		System.out.print("\033[5A"); // 위로 이동
 		for (String area : areas) {
-			Thread t = new Thread(myRun, area);
-			t.start();
+//			Thread t = new Thread(myRun, area);
+//			t.setDaemon(true);
+//			t.start();
+//			Thread.ofPlatform().start(myRun);
+//			Thread t = Thread.ofVirtual().start(myRun);
+//			t.join(); // 동시에 도는 게 아니라 하나씩 돌게 하는 것
 			// t.join();
 		}
 	}
